--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
-  "name": "zk1lx",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "gulp dev"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/mjj0405/zk1lx.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/mjj0405/zk1lx/issues"
-  },
-  "homepage": "https://github.com/mjj0405/zk1lx#readme",
-  "devDependencies": {
-    "gulp-autoprefixer": "^5.0.0",
-    "gulp-clean-css": "^3.9.4",
-    "gulp-concat": "^2.6.1",
-    "gulp-sass": "^4.0.1",
-    "gulp-uglify": "^3.0.0",
-    "gulp-webserver": "^0.9.1"
-  }
+    "name": "zk1lx",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev": "gulp dev",
+        "build": "gulp build"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/mjj0405/zk1lx.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/mjj0405/zk1lx/issues"
+    },
+    "homepage": "https://github.com/mjj0405/zk1lx#readme",
+    "devDependencies": {
+        "gulp-autoprefixer": "^5.0.0",
+        "gulp-clean-css": "^3.9.4",
+        "gulp-concat": "^2.6.1",
+        "gulp-sass": "^4.0.1",
+        "gulp-uglify": "^3.0.0",
+        "gulp-webserver": "^0.9.1"
+    }
 }
